--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server --watch db.json --port 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3",
+    "@supabase/supabase-js": "^2.52.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
